--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html ng-app="order">
   <head>
     <meta charset="utf-8">
-    <title>MTFK Book Store</title>
+    <title>Harry Book Store</title>
 	  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
 	  <script src="app.js"></script>
   </head>
