--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,70 @@
 <!DOCTYPE html>
 <html ng-app="order">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="utf-8">
     <title>Harry Book Store</title>
+
+    <!-- CSS -->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="materialize/css.css">
+
+    <!--  Scripts-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
 	  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
 	  <script src="app.js"></script>
+
   </head>
   <body ng-controller="orderController">
+
+    <div class="container">
+      <img src="IMG/LOGO.png" style="padding-top:20px;">
+    </div>
+    <div class="container">
+      <div class="section">
+        <div class="row">
+          <div class="col s12 m4">
+            <img class="responsive-img z-depth-5" src="IMG/S1.jpg">
+            <br>
+            <h6>Harry Potter and the Philosopher 's Stone</h6>
+          </div>
+          <div class="col s12 m4">
+            <img class="responsive-img z-depth-5" src="IMG/S2.jpg">
+            <br>
+            <h6>Harry Potter and the Philosopher 's Stone</h6>
+          </div>
+          <div class="col s12 m4">
+            <img class="responsive-img z-depth-5" src="IMG/S3.jpg">
+            <br>
+            <h6>Harry Potter and the Philosopher 's Stone</h6>
+          </div>
+          <div class="col s12 m4">
+            <img class="responsive-img z-depth-5" src="IMG/S4.jpg">
+            <br>
+            <h6>Harry Potter and the Philosopher 's Stone</h6>
+          </div>
+          <div class="col s12 m4">
+            <img class="responsive-img z-depth-5" src="IMG/S5.jpg">
+            <br>
+            <h6>Harry Potter and the Philosopher 's Stone</h6>
+          </div>
+          <div class="col s12 m4">
+            <img class="responsive-img z-depth-5" src="IMG/S6.jpg">
+            <br>
+            <h6>Harry Potter and the Philosopher 's Stone</h6>
+          </div>
+          <div class="col s12 m4">
+            <img class="responsive-img z-depth-5" src="IMG/S7.jpg">
+            <br>
+            <h6>Harry Potter and the Philosopher 's Stone</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+
+<br><br>
 
       <button ng-click="addOrder({price : 100, sector : 'Philosopher’s Stone', amount : 1})">secter1</button>
       <button ng-click="addOrder({price : 100, sector : 'Chamber of Secrets', amount : 1})">secter2</button>
