--- a/public/index.html
+++ b/public/index.html
@@ -26,37 +26,37 @@
       <div class="section">
         <div class="row">
           <div class="col s12 m4">
-            <img class="responsive-img z-depth-5" src="IMG/S1.jpg">
+            <img class="responsive-img z-depth-5" src="IMG/s1.jpg">
             <br>
             <h6>Harry Potter and the Philosopher 's Stone</h6>
           </div>
           <div class="col s12 m4">
-            <img class="responsive-img z-depth-5" src="IMG/S2.jpg">
+            <img class="responsive-img z-depth-5" src="IMG/s2.jpg">
             <br>
             <h6>Harry Potter and the Philosopher 's Stone</h6>
           </div>
           <div class="col s12 m4">
-            <img class="responsive-img z-depth-5" src="IMG/S3.jpg">
+            <img class="responsive-img z-depth-5" src="IMG/s3.jpg">
             <br>
             <h6>Harry Potter and the Philosopher 's Stone</h6>
           </div>
           <div class="col s12 m4">
-            <img class="responsive-img z-depth-5" src="IMG/S4.jpg">
+            <img class="responsive-img z-depth-5" src="IMG/s4.jpg">
             <br>
             <h6>Harry Potter and the Philosopher 's Stone</h6>
           </div>
           <div class="col s12 m4">
-            <img class="responsive-img z-depth-5" src="IMG/S5.jpg">
+            <img class="responsive-img z-depth-5" src="IMG/s5.jpg">
             <br>
             <h6>Harry Potter and the Philosopher 's Stone</h6>
           </div>
           <div class="col s12 m4">
-            <img class="responsive-img z-depth-5" src="IMG/S6.jpg">
+            <img class="responsive-img z-depth-5" src="IMG/s6.jpg">
             <br>
             <h6>Harry Potter and the Philosopher 's Stone</h6>
           </div>
           <div class="col s12 m4">
-            <img class="responsive-img z-depth-5" src="IMG/S7.jpg">
+            <img class="responsive-img z-depth-5" src="IMG/s7.jpg">
             <br>
             <h6>Harry Potter and the Philosopher 's Stone</h6>
           </div>
