--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="utf-8">
     <title>Harry Book Store</title>
-
-    <!-- CSS -->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="materialize/css.css">
-
-    <!--  Scripts-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
 	  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
@@ -21,44 +17,57 @@
 
     <div class="container">
       <img src="IMG/LOGO.png" style="padding-top:20px;">
+      <div class="fixed-action-btn horizontal" style="top: 25px; right: 200px;">
+        <a class="btn-floating btn-large black">
+          <i class="large mdi-navigation-menu"></i>
+        </a>
+      </div>
     </div>
+    <br><br>
     <div class="container">
       <div class="section">
         <div class="row">
-          <div class="col s12 m4">
+          <div class="col s12 m3">
             <img class="responsive-img z-depth-5" src="IMG/s1.jpg">
             <br>
             <h6>Harry Potter and the Philosopher 's Stone</h6>
+            <button class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'Philosopher’s Stone', amount : 1})">Buy</button>
           </div>
-          <div class="col s12 m4">
+          <div class="col s12 m3">
             <img class="responsive-img z-depth-5" src="IMG/s2.jpg">
             <br>
-            <h6>Harry Potter and the Philosopher 's Stone</h6>
+            <h6>Harry Potter and the Chamber of Secrets</h6>
+            <button class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'Chamber of Secrets', amount : 1})">Buy</button>
           </div>
-          <div class="col s12 m4">
+          <div class="col s12 m3">
             <img class="responsive-img z-depth-5" src="IMG/s3.jpg">
             <br>
-            <h6>Harry Potter and the Philosopher 's Stone</h6>
+            <h6>Harry Potter and the Prisoner of Azkaban</h6>
+            <button class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'Prisoner of Azkaban', amount : 1})">Buy</button>
           </div>
-          <div class="col s12 m4">
+          <div class="col s12 m3">
             <img class="responsive-img z-depth-5" src="IMG/s4.jpg">
             <br>
-            <h6>Harry Potter and the Philosopher 's Stone</h6>
+            <h6>Harry Potter and the Goblet of Fire</h6>
+            <button class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'Goblet of Fire', amount : 1})">Buy</button>
           </div>
           <div class="col s12 m4">
             <img class="responsive-img z-depth-5" src="IMG/s5.jpg">
             <br>
-            <h6>Harry Potter and the Philosopher 's Stone</h6>
+            <h6>Harry Potter and the Order of the Phoenix</h6>
+            <button class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'Order of the Phoenix', amount : 1})">Buy</button>
           </div>
           <div class="col s12 m4">
             <img class="responsive-img z-depth-5" src="IMG/s6.jpg">
             <br>
-            <h6>Harry Potter and the Philosopher 's Stone</h6>
+            <h6>Harry Potter and the Half-Blood Prince</h6>
+            <button class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'Half-Blood Prince', amount : 1})">Buy</button>
           </div>
           <div class="col s12 m4">
             <img class="responsive-img z-depth-5" src="IMG/s7.jpg">
             <br>
-            <h6>Harry Potter and the Philosopher 's Stone</h6>
+            <h6>Harry Potter and the Deathly Hallows</h6>
+            <button class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'Deathly Hallows', amount : 1})">Buy</button>
           </div>
         </div>
       </div>
@@ -66,13 +75,6 @@
 
 <br><br>
 
-      <button ng-click="addOrder({price : 100, sector : 'Philosopher’s Stone', amount : 1})">secter1</button>
-      <button ng-click="addOrder({price : 100, sector : 'Chamber of Secrets', amount : 1})">secter2</button>
-      <button ng-click="addOrder({price : 100, sector : 'Prisoner of Azkaban', amount : 1})">secter3</button>
-      <button ng-click="addOrder({price : 100, sector : 'Goblet of Fire', amount : 1})">secter4</button>
-      <button ng-click="addOrder({price : 100, sector : 'Order of the Phoenix', amount : 1})">secter5</button>
-      <button ng-click="addOrder({price : 100, sector : 'Half-Blood Prince', amount : 1})">secter6</button>
-      <button ng-click="addOrder({price : 100, sector : 'Deathly Hallows', amount : 1})">secter7</button>
 
 <div ng-repeat="val in ORDER">
   {{val}}
