--- a/public/index.html
+++ b/public/index.html
@@ -27,46 +27,41 @@
     <div class="container">
       <div class="section">
         <div class="row">
-          <div class="col s12 m3">
-            <img class="responsive-img z-depth-5" src="IMG/s1.jpg">
+          <div class="col s12 m3" align="center">
+            <img class="responsive-img z-depth-5" src="IMG/1.jpg">
             <br>
-            <h6>Harry Potter and the Philosopher 's Stone</h6>
             <button class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'Philosopher’s Stone', amount : 1})">Buy</button>
           </div>
-          <div class="col s12 m3">
-            <img class="responsive-img z-depth-5" src="IMG/s2.jpg">
+          <div class="col s12 m3" align="center">
+            <img class="responsive-img z-depth-5" src="IMG/2.jpg">
             <br>
-            <h6>Harry Potter and the Chamber of Secrets</h6>
             <button class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'Chamber of Secrets', amount : 1})">Buy</button>
           </div>
-          <div class="col s12 m3">
-            <img class="responsive-img z-depth-5" src="IMG/s3.jpg">
+          <div class="col s12 m3" align="center">
+            <img class="responsive-img z-depth-5" src="IMG/3.jpg">
             <br>
-            <h6>Harry Potter and the Prisoner of Azkaban</h6>
             <button class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'Prisoner of Azkaban', amount : 1})">Buy</button>
           </div>
-          <div class="col s12 m3">
-            <img class="responsive-img z-depth-5" src="IMG/s4.jpg">
+          <div class="col s12 m3" align="center">
+            <img class="responsive-img z-depth-5" src="IMG/4.jpg">
             <br>
-            <h6>Harry Potter and the Goblet of Fire</h6>
             <button class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'Goblet of Fire', amount : 1})">Buy</button>
           </div>
-          <div class="col s12 m4">
-            <img class="responsive-img z-depth-5" src="IMG/s5.jpg">
+        </div>
+        <div class="row">
+          <div class="col s12 m3" align="center">
+            <img class="responsive-img z-depth-5" src="IMG/5.jpg">
             <br>
-            <h6>Harry Potter and the Order of the Phoenix</h6>
             <button class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'Order of the Phoenix', amount : 1})">Buy</button>
           </div>
-          <div class="col s12 m4">
-            <img class="responsive-img z-depth-5" src="IMG/s6.jpg">
+          <div class="col s12 m3" align="center">
+            <img class="responsive-img z-depth-5" src="IMG/6.jpg">
             <br>
-            <h6>Harry Potter and the Half-Blood Prince</h6>
             <button class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'Half-Blood Prince', amount : 1})">Buy</button>
           </div>
-          <div class="col s12 m4">
-            <img class="responsive-img z-depth-5" src="IMG/s7.jpg">
+          <div class="col s12 m3" align="center">
+            <img class="responsive-img z-depth-5" src="IMG/7.jpg">
             <br>
-            <h6>Harry Potter and the Deathly Hallows</h6>
             <button class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'Deathly Hallows', amount : 1})">Buy</button>
           </div>
         </div>
@@ -74,6 +69,10 @@
     </div>
 
 <br><br>
+
+
+
+
 
 
 <div ng-repeat="val in ORDER">
