--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <title>Harry Book Store</title>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="materialize/css.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/materialize.js"></script>
 	  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
 	  <script src="app.js"></script>
 
@@ -17,7 +17,7 @@
 
     <div class="container">
       <img class="responsive-img" src="IMG/LOGO.png" style="padding-top:20px;">
-      <div class="fixed-action-btn horizontal" style="top: 25px; right: 200px;">
+      <div class="fixed-action-btn horizontal">
         <a class="btn-floating btn-large black">
           <i class="new badge">{{delAmount.amount}}</i>
         </a>
