--- a/public/index.html
+++ b/public/index.html
@@ -5,26 +5,50 @@
     <meta charset="utf-8">
     <title>Harry Book Store</title>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="materialize/css.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="js/materialize.js"></script>
+    <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 	  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
 	  <script src="app.js"></script>
 
   </head>
   <body ng-controller="orderController">
 
-    <div class="container">
-      <img class="responsive-img" src="IMG/LOGO.png" style="padding-top:20px;">
-      <div class="fixed-action-btn horizontal">
-        <a class="btn-floating btn-large black">
-          <i class="new badge">{{delAmount.amount}}</i>
-        </a>
+  <!-- Nav -->
+  <div class="navbar-fixed">
+    <nav class="orange darken-4" style="opacity:0.85;">
+      <div class="nav-wrapper container">
+        <a href="#!" class="brand-logo"><img class="responsive-img" src="IMG/LOGO.png"></a>
+        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+        <ul class="right hide-on-med-and-down">
+          <li>
+            <button class="btn-large waves-effect waves-light black modal-trigger" data-target="modal1" id="cart"><a href=""><span class="new badge">4</span></a>shopping Cart </button>
+
+          </li>
+
+
+
+
+        </ul>
+        <ul class="side-nav" id="mobile-demo">
+          <li>
+            <button class="btn-large waves-effect waves-light black modal-trigger" data-target="modal1" id="cart"><i class="material-icons left">shopping_cart</i>shopping Cart</button>
+          </li>
+        </ul>
       </div>
-    </div>
-    <br><br>
-    <div class="container">
+    </nav>
+  </div>
+
+<!-- script mobile nav-->
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('.button-collapse').sideNav();
+  })
+</script>
+
+  <!-- Book -->
+    <div class="container" style="margin-top:20px;">
       <div class="section">
         <div class="row">
           <div class="col s12 m3" align="center">
@@ -109,52 +133,57 @@
         </div>
       </div>
     </div>
-    <div class="container">
+
+  <!-- Modal -->
+  <div class="modal" id="modal1">
+    <div class="modal-content">
+      <!-- Shopping Cart-->
       <div class="row">
-        <div class="col s12 m6">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title"><center>Shopping Cart</center></span>
-                <p class="row">
-                  <div class="col s9 m10">
-                    <b>ชื่อหนังสือ</b>
-                  </div>
-                  <div class="col m2 s3">
-                    <b>จำนวน</b>
-                  </div>
-                  <div class="row" ng-repeat="val in ORDER">
-                    <div class="col s9 m10">
-                      <h6>{{val.sector}}</h6>
-                    </div>
-                    <div class="col m2 s3">
-                      <h6>{{val.amount}}</h6>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row">
-                    <div class="col s7 m10">
-                      ส่วนลด
-                    </div>
-                    <div class="col m2 s5">
-                      {{Total.discount}} ฿
-                    </div>
-                    <br>
-                    <div class="col s7 m10">
-                      ราคารวมสุทธิ
-                    </div>
-                    <div class="col m2 s5">
-                      {{Total.sumPrice}} ฿
-                    </div>
-                  </div>
-                </p>
-            </div>
-            <div class="card-action">
-                  <a href="#">Pay</a>
-            </div>
-          </div>
+        <h5 class="center-align"><b>Shopping Cart</b></h5>
+        <br>
+        <div class="col s9 m10">
+          <b>ชื่อหนังสือ</b>
+        </div>
+        <div class="col m2 s3">
+          <b>จำนวนสินค้า</b>
+        </div>
+      </div>
+      <div class="row" ng-repeat="val in ORDER">
+        <div class="col s9 m10">
+          <h6>{{val.sector}}</h6>
+        </div>
+        <div class="col m2 s3">
+          <h6>{{val.amount}}</h6>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col s7 m10">
+          ส่วนลด
+        </div>
+        <div class="col m2 s5">
+          {{Total.discount}} ฿
+        </div>
+        <br>
+        <div class="col s7 m10">
+          ราคารวมสุทธิ
+        </div>
+        <div class="col m2 s5">
+          {{Total.sumPrice}} ฿
         </div>
       </div>
     </div>
+    <div class="modal-footer">
+      <a href="#!" class="btn-flat modal-action modal-close waves-effect waves-default">Close</a>
+    </div>
   </div>
+
+  <!-- script modal-->
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $('.modal-trigger').leanModal();
+    })
+  </script>
+
 </body>
 </html>
