--- a/public/index.html
+++ b/public/index.html
@@ -20,20 +20,27 @@
     <nav class="orange darken-4" style="opacity:0.85;">
       <div class="nav-wrapper container">
         <a href="#!" class="brand-logo"><img class="responsive-img" src="IMG/LOGO.png"></a>
-        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">shopping_basket</i></a>
         <ul class="right hide-on-med-and-down">
           <li>
-            <button class="btn-large waves-effect waves-light black modal-trigger" data-target="modal1" id="cart"><a href=""><span class="new badge">4</span></a>shopping Cart </button>
+            <button class="btn-large waves-effect waves-light black modal-trigger" data-target="modal1" id="cart">
+              <li ng-show = "TAM > 0">
+                <a href="#"><span class="new badge">{{TAM}}</span></a>
+              </li>
+                  <i class="material-icons left">shopping_cart</i>shopping Cart
+            </button>
 
           </li>
-
-
-
-
         </ul>
         <ul class="side-nav" id="mobile-demo">
           <li>
-            <button class="btn-large waves-effect waves-light black modal-trigger" data-target="modal1" id="cart"><i class="material-icons left">shopping_cart</i>shopping Cart</button>
+            <button class="btn-large waves-effect waves-light black modal-trigger" data-target="modal1" id="cart">
+              <li ng-show = "TAM > 0">
+                <a href="#"><span class="new badge">{{TAM}}</span></a>
+              </li>
+                  <i class="material-icons left">shopping_cart</i>shopping Cart
+            </button>
+
           </li>
         </ul>
       </div>
