--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
               <li ng-show = "TAM > 0">
                 <a href="#"><span class="new badge">{{TAM}}</span></a>
               </li>
-                  <i class="material-icons left">shopping_cart</i>shopping Cart
+                  <i class="material-icons left">store</i>shopping Cart
             </button>
 
           </li>
