--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,10 @@
         <ul class="right hide-on-med-and-down">
           <li>
             <button class="btn-large waves-effect waves-light black modal-trigger" data-target="modal1" id="cart">
+              <i class="material-icons left">shopping_basket</i>shopping Cart
               <li ng-show = "TAM > 0">
-                <a href="#"><span class="new badge">{{TAM}}</span></a>
+                <a><span class="new badge">{{TAM}}</span></a>
               </li>
-                  <i class="material-icons left">store</i>shopping Cart
             </button>
 
           </li>
