--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         <ul class="right hide-on-med-and-down">
           <li>
             <button class="btn-large waves-effect waves-light black modal-trigger" data-target="modal1" id="cart">
-              <i class="material-icons left">shopping_basket</i>shopping Cart
+              <i class="material-icons left">shopping_cart</i>shopping Cart
               <li ng-show = "TAM > 0">
                 <a><span class="new badge">{{TAM}}</span></a>
               </li>
