--- a/public/index.html
+++ b/public/index.html
@@ -186,7 +186,9 @@
   <!-- script modal-->
   <script type="text/javascript">
     $(document).ready(function(){
-      $('.modal-trigger').leanModal();
+      $('.modal-trigger').leanModal({
+        opacity:.7
+      });
     })
   </script>
 
