--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
         <ul class="right hide-on-med-and-down">
           <li>
-            <button class="btn-large waves-effect waves-light black modal-trigger" data-target="modal1" id="cart">
+            <button class="btn-large waves-effect waves-light black modal-trigger" data-target="modal1">
               <i class="material-icons left">shopping_cart</i>shopping Cart
               <li ng-show = "TAM > 0">
                 <a><span class="new badge">{{TAM}}</span></a>
@@ -146,23 +146,32 @@
       <div class="row">
         <h5 class="center-align"><b>Shopping Cart</b></h5>
         <br>
-        <div class="col s9 m10">
+        <div class="col s8 m7">
           <b>ชื่อหนังสือ</b>
         </div>
-        <div class="col m2 s3">
+        <div class="col m3 s3">
           <b>จำนวนสินค้า</b>
         </div>
+        <div class="col m2 s1">
+
+        </div>
+
       </div>
       <div class="row" ng-repeat="val in ORDER">
-        <div class="col s9 m10">
+        <div class="col s5 m7 l8">
           <h6>{{val.sector}}</h6>
         </div>
-        <div class="col m2 s3">
+        <div class="col m1 s1 l1">
           <h6>{{val.amount}}</h6>
+        </div>
+        <div class="col m4 s6 l3">
+          <a href="" ng-click="delAmount($index)"><i class="material-icons left">fast_rewind</i></a>
+          <a href="" ng-click="addAmount($index)"><i class="material-icons left">fast_forward</i></a>
+          <a href="" ng-click="deleteOrder($index)"><i class="material-icons left">delete</i></a>
         </div>
       </div>
       <hr>
-      <div class="row">
+      <div class="row" ng-show="TAM > 0">
         <div class="col s7 m10">
           ส่วนลด
         </div>
