--- a/public/index.html
+++ b/public/index.html
@@ -149,10 +149,10 @@
         <div class="col s8 m7">
           <b>ชื่อหนังสือ</b>
         </div>
-        <div class="col m3 s3">
+        <div class="col s3 m3">
           <b>จำนวนสินค้า</b>
         </div>
-        <div class="col m2 s1">
+        <div class="col s1 m2">
 
         </div>
 
@@ -161,10 +161,10 @@
         <div class="col s5 m7 l8">
           <h6>{{val.sector}}</h6>
         </div>
-        <div class="col m1 s1 l1">
+        <div class="col s1 m1 l1">
           <h6>{{val.amount}}</h6>
         </div>
-        <div class="col m4 s6 l3">
+        <div class="col s6 m4 l3">
           <a href="" ng-click="delAmount($index)"><i class="material-icons left">fast_rewind</i></a>
           <a href="" ng-click="addAmount($index)"><i class="material-icons left">fast_forward</i></a>
           <a href="" ng-click="deleteOrder($index)"><i class="material-icons left">delete</i></a>
@@ -175,7 +175,7 @@
         <div class="col s7 m10">
           ส่วนลด
         </div>
-        <div class="col m2 s5">
+        <div class="col s5 m2">
           {{Total.discount}} ฿
         </div>
         <br>
