--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,22 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="materialize/css.css">
+
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 	  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
 	  <script src="app.js"></script>
+
   </head>
   <body ng-controller="orderController">
 
   <!-- Nav -->
   <div class="navbar-fixed">
     <nav class="orange darken-4" style="opacity:0.85;">
-      <a href="#!" class="brand-logo"><img class="responsive-img" src="IMG/logo3.png"></a>
       <div class="nav-wrapper container">
+        <a href="#!" class="brand-logo"><img class="responsive-img" src="IMG/logo3.png"></a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons modal-trigger" data-target="modal1">shopping_basket</i><div ng-show = "TAM > 0" class="badge">{{TAM}}</div></a>
+
         <ul class="right hide-on-med-and-down">
           <li>
             <button class="btn-large waves-effect waves-light black modal-trigger" data-target="modal1">
@@ -28,11 +31,19 @@
                 <a><span class="new badge">{{TAM}}</span></a>
               </li>
             </button>
+
           </li>
         </ul>
       </div>
     </nav>
   </div>
+
+<!-- script mobile nav-->
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('.button-collapse').sideNav();
+  })
+</script>
 
   <!-- Book -->
     <div class="container" style="margin-top:20px;">
