--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <div class="navbar-fixed">
     <nav class="orange darken-4" style="opacity:0.85;">
       <div class="nav-wrapper container">
-        <a href="#!" class="brand-logo"><img class="responsive-img" src="IMG/logo3.png"></a>
+        <a href="index.html" class="brand-logo"><img class="responsive-img" src="IMG/logo3.png"></a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons modal-trigger" data-target="modal1">shopping_basket</i><div id="TAM" ng-show = "TAM > 0" class="badge">{{TAM}}</div></a>
 
         <ul class="right hide-on-med-and-down">
