--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
               </div>
               <div class="card-content teal lighten-5">
                 <h6>ราคา 100 ฿</h6>
-                <button id="sec1" class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Philosopher’s Stone', amount : 1})">Buy</button>
+                <button id="sec1" class="btn waves-effect waves-light black" onclick="Materialize.toast('เพิ่มสินค้าเรียบร้อย', 4000)" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Philosopher’s Stone', amount : 1})">Buy</button>
               </div>
             </div>
           </div>
@@ -67,7 +67,7 @@
               </div>
               <div class="card-content teal lighten-5">
                 <h6>ราคา 100 ฿</h6>
-                <button id="sec2" class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Chamber of Secrets', amount : 1})">Buy</button>
+                <button id="sec2" class="btn waves-effect waves-light black" onclick="Materialize.toast('เพิ่มสินค้าเรียบร้อย', 4000)" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Chamber of Secrets', amount : 1})">Buy</button>
               </div>
             </div>
           </div>
@@ -78,7 +78,7 @@
               </div>
               <div class="card-content teal lighten-5">
                 <h6>ราคา 100 ฿</h6>
-                <button id="sec3" class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Prisoner of Azkaban', amount : 1})">Buy</button>
+                <button id="sec3" class="btn waves-effect waves-light black" onclick="Materialize.toast('เพิ่มสินค้าเรียบร้อย', 4000)" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Prisoner of Azkaban', amount : 1})">Buy</button>
               </div>
             </div>
           </div>
@@ -89,7 +89,7 @@
               </div>
               <div class="card-content teal lighten-5">
                 <h6>ราคา 100 ฿</h6>
-                <button id="sec4" class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Goblet of Fire', amount : 1})">Buy</button>
+                <button id="sec4" class="btn waves-effect waves-light black" onclick="Materialize.toast('เพิ่มสินค้าเรียบร้อย', 4000)" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Goblet of Fire', amount : 1})">Buy</button>
               </div>
             </div>
           </div>
@@ -102,7 +102,7 @@
               </div>
               <div class="card-content teal lighten-5">
                 <h6>ราคา 100 ฿</h6>
-                <button id="sec5" class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Order of the Phoenix', amount : 1})">Buy</button>
+                <button id="sec5" class="btn waves-effect waves-light black" onclick="Materialize.toast('เพิ่มสินค้าเรียบร้อย', 4000)" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Order of the Phoenix', amount : 1})">Buy</button>
               </div>
             </div>
           </div>
@@ -113,7 +113,7 @@
               </div>
               <div class="card-content teal lighten-5">
                 <h6>ราคา 100 ฿</h6>
-                <button id="sec6" class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Half-Blood Prince', amount : 1})">Buy</button>
+                <button id="sec6" class="btn waves-effect waves-light black" onclick="Materialize.toast('เพิ่มสินค้าเรียบร้อย', 4000)" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Half-Blood Prince', amount : 1})">Buy</button>
               </div>
             </div>
           </div>
@@ -124,7 +124,7 @@
               </div>
               <div class="card-content teal lighten-5">
                 <h6>ราคา 100 ฿</h6>
-                <button id="sec7" class="btn waves-effect waves-light black" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Deathly Hallows', amount : 1})">Buy</button>
+                <button id="sec7" class="btn waves-effect waves-light black" onclick="Materialize.toast('เพิ่มสินค้าเรียบร้อย', 4000)" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Deathly Hallows', amount : 1})">Buy</button>
               </div>
             </div>
           </div>
