--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,7 @@
                 <img class="responsive-img z-depth-2" src="IMG/1.jpg">
               </div>
               <div class="card-content teal lighten-5">
+                <b>Harry Potter ภาค 1</b>
                 <h6>ราคา 100 ฿</h6>
                 <button id="sec1" class="btn waves-effect waves-light black" onclick="Materialize.toast('เพิ่มสินค้าลงตระกร้าเรียบร้อย',4000,'rounded')" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Philosopher’s Stone', amount : 1})">Buy</button>
               </div>
@@ -64,6 +65,7 @@
                 <img class="responsive-img z-depth-2" src="IMG/2.jpg">
               </div>
               <div class="card-content teal lighten-5">
+                <b>Harry Potter ภาค 2</b>
                 <h6>ราคา 100 ฿</h6>
                 <button id="sec2" class="btn waves-effect waves-light black" onclick="Materialize.toast('เพิ่มสินค้าลงตระกร้าเรียบร้อย',4000,'rounded')" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Chamber of Secrets', amount : 1})">Buy</button>
               </div>
@@ -75,6 +77,7 @@
                 <img class="responsive-img z-depth-2" src="IMG/3.jpg">
               </div>
               <div class="card-content teal lighten-5">
+                <b>Harry Potter ภาค 3</b>
                 <h6>ราคา 100 ฿</h6>
                 <button id="sec3" class="btn waves-effect waves-light black" onclick="Materialize.toast('เพิ่มสินค้าลงตระกร้าเรียบร้อย',4000,'rounded')" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Prisoner of Azkaban', amount : 1})">Buy</button>
               </div>
@@ -86,6 +89,7 @@
                 <img class="responsive-img z-depth-2" src="IMG/4.jpg">
               </div>
               <div class="card-content teal lighten-5">
+                <b>Harry Potter ภาค 4</b>
                 <h6>ราคา 100 ฿</h6>
                 <button id="sec4" class="btn waves-effect waves-light black" onclick="Materialize.toast('เพิ่มสินค้าลงตระกร้าเรียบร้อย',4000,'rounded')" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Goblet of Fire', amount : 1})">Buy</button>
               </div>
@@ -99,6 +103,7 @@
                 <img class="responsive-img z-depth-2" src="IMG/5.jpg">
               </div>
               <div class="card-content teal lighten-5">
+                <b>Harry Potter ภาค 5</b>
                 <h6>ราคา 100 ฿</h6>
                 <button id="sec5" class="btn waves-effect waves-light black" onclick="Materialize.toast('เพิ่มสินค้าลงตระกร้าเรียบร้อย',4000,'rounded')" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Order of the Phoenix', amount : 1})">Buy</button>
               </div>
@@ -110,6 +115,7 @@
                 <img class="responsive-img z-depth-2" src="IMG/6.jpg">
               </div>
               <div class="card-content teal lighten-5">
+                <b>Harry Potter ภาค 6</b>
                 <h6>ราคา 100 ฿</h6>
                 <button id="sec6" class="btn waves-effect waves-light black" onclick="Materialize.toast('เพิ่มสินค้าลงตระกร้าเรียบร้อย',4000,'rounded')" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Half-Blood Prince', amount : 1})">Buy</button>
               </div>
@@ -121,6 +127,7 @@
                 <img class="responsive-img z-depth-2" src="IMG/7.jpg">
               </div>
               <div class="card-content teal lighten-5">
+                <b>Harry Potter ภาค 7</b>
                 <h6>ราคา 100 ฿</h6>
                 <button id="sec7" class="btn waves-effect waves-light black" onclick="Materialize.toast('เพิ่มสินค้าลงตระกร้าเรียบร้อย',4000,'rounded')" ng-click="addOrder({price : 100, sector : 'HarryPotter and the Deathly Hallows', amount : 1})">Buy</button>
               </div>
